# MAOOpenClawChatbot

./: .env.example  .gitignore  CLAUDE.md  README.md  openclaw-claudecode-prompt.md  pyproject.toml  requirements.txt
bot/: __init__.py  app.py  bot_handler.py  formatter.py
config/: __init__.py  settings.py
embeddings/: __init__.py  embedder.py  vector_store.py
ingestion/: __init__.py  chunker.py  drive_client.py  pipeline.py
ingestion/parsers/: __init__.py  docx_parser.py  pptx_parser.py  xlsx_parser.py
rag/: __init__.py  chain.py  prompt_builder.py  retriever.py
scheduler/: __init__.py  sync_job.py
scripts/: setup_vertex_index.py
tests/: __init__.py  test_bot_handler.py  test_chunker.py  test_parsers.py  test_retriever.py
