[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openclaw"
version = "0.1.0"
description = "RAG-based Teams chatbot for querying MAO process documents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
